<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="372dp"
            android:layout_height="196dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo"
            android:padding="16dp"
            android:src="@drawable/arc_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecipes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/recipes_list"
            android:padding="8dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navigationBarFragment"
            android:name="com.example.sugarate.components.NavigationBarFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_post"
        android:src="@drawable/ic_add"
        app:backgroundTint="#5C6492"
        app:tint="@color/white" />
</FrameLayout>